<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:editingTool="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_hint"
            android:scaleType="centerCrop"
            app:layout_aspectRatio="178%"
            app:layout_widthPercent="100%"
            />

    </android.support.percent.PercentRelativeLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/card_text_view"
            android:textSize="16pt"
            android:layout_width="match_parent"
            android:autoLink="web"
            android:layout_height="wrap_content"/>

    </ScrollView>
</LinearLayout>
