...
                android:padding="3dip"/>
            <com.andreabaccega.widget.FormEditText
                customValidation:testType="regexp"
                customValidation:customRegexp="^((?!mailto:)(?:(?:https?|ftp)://)?(?:\\S+(?::\\S*)?@)?(?:(?:(?:[1-9]\\d?|1\\d\\d|2[01]\\d|22[0-3])(?:\\.(?:1?\\d{1,2}|2[0-4]\\d|25[0-5])){2}(?:\\.(?:[1-9]\\d?|1\\d\\d|2[0-4]\\d|25[0-4]))|(?:(?:[a-z\\x{a1}-\\x{ffff}0-9]+-?)*[a-z\\x{a1}-\\x{ffff}0-9]+)(?:\\.(?:[a-z\\x{a1}-\\x{ffff}0-9]+-?)*[a-z\\x{a1}-\\x{ffff}0-9]+)*(?:\\.(?:[a-z\\x{a1}-\\x{ffff}]{2,}
                customValidation:emptyAllowed="true"
                customValidation:testErrorString="This is not a valid URL"
                android:id="@+id/edit_imgpath_entry"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:minLines="1"
                android:layout_weight="1" />
...
